设置和关于的一堆。。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">腕上哔哩哔哩</string>
-    <string name="followme">关注一波软件作者小哥哥吧~~</string>
+    <string name="app_name">腕上哔哩</string>
 </resources>
