看动态和楼中楼的评论，不出意外就是1.4发行版了（别问我为什么没有1.2和1.3）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">腕上哔哩</string>
+    <string name="update">
+        v1.4\n我保证下一次更新播放视频。。。。\n\n新增：\n动态可以点赞、查看评论和评论\n视频详情界面左右划显示评论和相关推荐\n点击评论的评论键显示楼中楼\n用户界面左右划显示该用户动态\n评论可用语音识别输入\n评论支持插入小尾巴\n搜索界面可用语音识别输入\n搜索界面显示当前热门搜索\n增加查看图片的缩放功能\n\n优化：\n收藏夹标题超过一行用省略号表示\n用户界面本人不显示关注按钮\n\n修复：\n修复动态用户头像过大内存溢出问题\n\n\nv1.1\n修复一批重大bug
+    </string>
 </resources>
