--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">腕上哔哩</string>
     <string name="update">
-        v2.2\n新增：\n下载视频\n发动态以及转发他人动态和视频\n完全自定义的小尾巴\n可以查看自己和他人的关注和粉丝\n\n优化：\n优化视频播放逻辑（去关注“哔哩哔哩番剧”！）\n评论和发动态中语音识别后会插入之前的内容中，不会替换掉之前的内容\n\n修复\n修复因接口关闭不能看视频的问题\n修复查看自己和他人动态时，加载历史动态时动态会重复的问题\n\nv2.0\n新增：\n视频详情中查看视频分P\n点击视频详情中的分P或者播放打开腕上视频播放视频\n\n优化：\n查看评论界面中无评论时也显示发送评论按钮\n优化评论小尾巴可以选择是否加上作者信息\n\n修复：\n修复进入收藏夹仍有可能闪退的bug....\n修复查看图片由于可能图片过大导致的内存溢出\n修复查看用户的动态无法评论的问题\n修复用户登录信息过期后应用无法打开菜单的问题\n\nv1.4\n我保证下一次更新播放视频。。。。\n\n新增：\n动态可以点赞、查看评论和评论\n视频详情界面左右划显示评论和相关推荐\n点击评论的评论键显示楼中楼\n用户界面左右划显示该用户动态\n评论可用语音识别输入\n评论支持插入小尾巴\n搜索界面可用语音识别输入\n搜索界面显示当前热门搜索\n增加查看图片的缩放功能\n\n优化：\n收藏夹标题超过一行用省略号表示\n用户界面本人不显示关注按钮\n\n修复：\n修复动态用户头像过大内存溢出问题\n\n\nv1.1\n修复一批重大bug
+        v2.2\n新增：\n下载视频\n发动态以及转发他人动态和视频\n完全自定义的小尾巴\n可以查看自己和他人的关注和粉丝\n\n优化：\n优化视频播放逻辑\n评论和发动态中语音识别后会插入之前的内容中，不会替换掉之前的内容\n\n修复\n修复因接口关闭不能看视频的问题\n修复查看自己和他人动态时，加载历史动态时动态会重复的问题\n\nv2.0\n新增：\n视频详情中查看视频分P\n点击视频详情中的分P或者播放打开腕上视频播放视频\n\n优化：\n查看评论界面中无评论时也显示发送评论按钮\n优化评论小尾巴可以选择是否加上作者信息\n\n修复：\n修复进入收藏夹仍有可能闪退的bug....\n修复查看图片由于可能图片过大导致的内存溢出\n修复查看用户的动态无法评论的问题\n修复用户登录信息过期后应用无法打开菜单的问题\n\nv1.4\n我保证下一次更新播放视频。。。。\n\n新增：\n动态可以点赞、查看评论和评论\n视频详情界面左右划显示评论和相关推荐\n点击评论的评论键显示楼中楼\n用户界面左右划显示该用户动态\n评论可用语音识别输入\n评论支持插入小尾巴\n搜索界面可用语音识别输入\n搜索界面显示当前热门搜索\n增加查看图片的缩放功能\n\n优化：\n收藏夹标题超过一行用省略号表示\n用户界面本人不显示关注按钮\n\n修复：\n修复动态用户头像过大内存溢出问题\n\n\nv1.1\n修复一批重大bug
     </string>
 
     <string name="dl_tip_1">视频储存位置：</string>
