增加举报评论功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,11 @@
     <string name="dynamic_live_status_2">未开播</string>
     <string name="dynamic_favor_desc">%d个内容</string>
 
+    <string name="title_activity_listview">ExpandableTextView in ListView</string>
+    <string name="title_activity_main">ExpandableTextView</string>
+    <string name="to_expand_hint">展开</string>
+    <string name="to_shrink_hint">收起</string>
+
+    <string name="reply_report_warning">该评论可能存在引战谩骂、人身攻击等行为，请勿对骂，善用举报，点击这里查看详情</string>
+
 </resources>
