--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,15 @@
 <resources>
     <string name="app_name">腕上哔哩</string>
+    <string name="app_package">cn.luern0313.wristbilibili</string>
+
     <string name="update">
         <![CDATA[
-        v2.6 <br/>新增： <br/>全站排行榜、每日pick up视频 <br/>视频个人定制推荐 <br/>番剧和影视详情页面、评论页面、相关推荐页面 <br/>搜索支持搜索番剧/影视、up主 <br/>增加账号密码登录 <br/><br/>优化： <br/>缓存视频显示本地封面 <br/>优化视频详情页进入速度 <br/>优化收藏视频、相关视频等页面布局 <br/>优化代码结构 <br/> <br/>修复： <br/>修复缓存视频时弹幕和封面没有正确下载的错误 <br/>其他布局或代码错误 <br/> <br/>v2.3 <br/>优化： <br/>优化一些视频不稳定需要重新进入才能观看的问题（之后更新腕上视频生效） <br/>修复： <br/>修复查看收藏夹为空的问题 <br/>修复在用户页转发动态无反应的问题 <br/> <br/>v2.2 <br/>新增： <br/>下载视频 <br/>发动态以及转发他人动态和视频 <br/>完全自定义的小尾巴 <br/>可以查看自己和他人的关注和粉丝 <br/> <br/>优化： <br/>优化视频播放逻辑 <br/>评论和发动态中语音识别后会插入之前的内容中，不会替换掉之前的内容 <br/> <br/>修复 <br/>修复因接口关闭不能看视频的问题 <br/>修复查看自己和他人动态时，加载历史动态时动态会重复的问题 <br/>修复搜索时偶尔会内存溢出的问题 <br/> <br/>v2.0 <br/>新增： <br/>视频详情中查看视频分P <br/>点击视频详情中的分P或者播放打开腕上视频播放视频 <br/> <br/>优化： <br/>查看评论界面中无评论时也显示发送评论按钮 <br/>优化评论小尾巴可以选择是否加上作者信息 <br/> <br/>修复： <br/>修复进入收藏夹仍有可能闪退的bug.... <br/>修复查看图片由于可能图片过大导致的内存溢出 <br/>修复查看用户的动态无法评论的问题 <br/>修复用户登录信息过期后应用无法打开菜单的问题 <br/> <br/> <br/>v1.4 <br/>我保证下一次更新播放视频。。。。 <br/> <br/>新增： <br/>动态可以点赞、查看评论和评论 <br/>视频详情界面左右划显示评论和相关推荐 <br/>点击评论的评论键显示楼中楼 <br/>用户界面左右划显示该用户动态 <br/>评论可用语音识别输入 <br/>评论支持插入小尾巴 <br/>搜索界面可用语音识别输入 <br/>搜索界面显示当前热门搜索 <br/>增加查看图片的缩放功能 <br/> <br/>优化： <br/>收藏夹标题超过一行用省略号表示 <br/>用户界面本人不显示关注按钮 <br/> <br/>修复： <br/>修复动态用户头像过大内存溢出问题 <br/> <br/> <br/>v1.1 <br/>修复一批重大bug
-]]>
+        v3.0<br>新增：<br>支持更多动态卡片<br>专栏<br>历史记录<br>视频一键三连<br>动态详情<br>支持更多用户详情界面的tab，如投稿、收藏和追番等<br>评论和动态中表情、@、话题、url等的显示和点击<br>暂未支持内容或网页的默认页面<br><br>优化：<br>优化评论区显示，支持评论排序，置顶评论等<br>图片页显示图片编号<br>单集番剧/影视视频页的跳转<br>优化应用图标<br>优化动态行数过多文本折叠的逻辑<br><br>修复：<br>修复密码登录不能使用的问题<br>修复有收藏夹为空时查看收藏闪退的问题<br>修复评论为空时不能发评论的问题<br>修复转发动态有时错误的问题<br><br>v2.6<br>新增：<br>全站排行榜、每日pick up视频<br>视频个人定制推荐<br>番剧和影视详情页面、评论页面、相关推荐页面<br>搜索支持搜索番剧/影视、up主<br>增加账号密码登录<br><br>优化：<br>缓存视频显示本地封面<br>优化视频详情页进入速度<br>优化收藏视频、相关视频等页面布局<br>优化代码结构<br><br>修复：<br>修复缓存视频时弹幕和封面没有正确下载的错误<br>其他布局或代码错误<br><br>v2.3<br>优化：<br>优化一些视频不稳定需要重新进入才能观看的问题（之后更新腕上视频生效）<br>修复：<br>修复查看收藏夹为空的问题<br>修复在用户页转发动态无反应的问题<br><br>v2.2<br>新增：<br>下载视频<br>发动态以及转发他人动态和视频<br>完全自定义的小尾巴<br>可以查看自己和他人的关注和粉丝<br><br>优化：<br>优化视频播放逻辑<br>评论和发动态中语音识别后会插入之前的内容中，不会替换掉之前的内容<br><br>修复<br>修复因接口关闭不能看视频的问题<br>修复查看自己和他人动态时，加载历史动态时动态会重复的问题<br>修复搜索时偶尔会内存溢出的问题<br><br>v2.0<br>新增：<br>视频详情中查看视频分P<br>点击视频详情中的分P或者播放打开腕上视频播放视频<br><br>优化：<br>查看评论界面中无评论时也显示发送评论按钮<br>优化评论小尾巴可以选择是否加上作者信息<br><br>修复：<br>修复进入收藏夹仍有可能闪退的bug....<br>修复查看图片由于可能图片过大导致的内存溢出<br>修复查看用户的动态无法评论的问题<br>修复用户登录信息过期后应用无法打开菜单的问题<br><br><br>v1.4<br>我保证下一次更新播放视频。。。。<br><br>新增：<br>动态可以点赞、查看评论和评论<br>视频详情界面左右划显示评论和相关推荐<br>点击评论的评论键显示楼中楼<br>用户界面左右划显示该用户动态<br>评论可用语音识别输入<br>评论支持插入小尾巴<br>搜索界面可用语音识别输入<br>搜索界面显示当前热门搜索<br>增加查看图片的缩放功能<br><br>优化：<br>收藏夹标题超过一行用省略号表示<br>用户界面本人不显示关注按钮<br><br>修复：<br>修复动态用户头像过大内存溢出问题<br><br><br>v1.1<br>修复一批重大bug
+        ]]>
+    </string>
+
+    <string name="open_source_github">本应用在github开源，欢迎star~~\nhttps://github.com/luern0313/WristBilibili</string>
+    <string name="open_source_other">--------------------------\n本应用使用了以下开源库，向这些开源库的作者致以敬意！\n--------------------------\nCircleImageView\nhdodenhof\nApache License 2.0\nhttps://github.com/hdodenhof/CircleImageView\n--------------------------\nExpandableTextView\nCarbs0126\nApache License 2.0\nhttps://github.com/Carbs0126/ExpandableTextView\n--------------------------\nWaveSwipeRefreshLayout\nrecruit-lifestyle\nApache License 2.0\nhttps://github.com/recruit-lifestyle/WaveSwipeRefreshLayout\n--------------------------\nsketch\npanpf\nApache License 2.0\nhttps://github.com/panpf/sketch\n--------------------------\nokhttp\nsquare\nApache License 2.0\nhttps://github.com/square/okhttp\n--------------------------\nFileDownloader\nlingochamp\nApache License 2.0\nhttps://github.com/lingochamp/FileDownloader\n--------------------------\nHtmlTextView\nSufficientlySecure\nApache License 2.0\nhttps://github.com/SufficientlySecure/html-textview\n--------------------------\nEventBus\ngreenrobot\nApache License 2.0\nhttps://github.com/greenrobot/EventBus\n--------------------------\nCircleProgressView\njenly1314\nMIT License\nhttps://github.com/jenly1314/CircleProgressView\n--------------------------\nLombok\nrzwitserloot\nMIT License\nhttps://github.com/rzwitserloot/lombok\n--------------------------\nfastjson\nalibaba\nApache License 2.0\nhttps://github.com/alibaba/fastjson\n--------------------------\n
     </string>
 
     <string name="dl_tip_1">视频储存位置：</string>
@@ -38,6 +44,8 @@
     <string name="title_activity_main">ExpandableTextView</string>
     <string name="to_expand_hint">展开</string>
     <string name="to_shrink_hint">收起</string>
+
+    <string name="reply_like_up">UP主觉得很赞</string>
 
     <string name="reply_report_warning">该评论可能存在引战谩骂、人身攻击等行为，请勿对骂，善用举报，点击这里查看详情</string>
 
